# lifemanagement-kit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  FEATURES.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/: CONTRIBUTING.md  pull_request_template.md
data-api/: CLAUDE.md  pyproject.toml
data-api/alembic/: env.py
data-api/alembic/versions/: 001_initial_schema.py  002_add_spotify_listening_history.py  002_add_spotify_tables.py
data-api/app/: __init__.py  config.py  database.py  logging.py  main.py
data-api/app/api/: __init__.py  audit.py  briefing.py  budget.py  calendar.py  content.py  credentials.py  finance.py  health.py  lms.py  social.py  spotify.py
data-api/app/integrations/: __init__.py  base.py  blackboard_client.py  canvas_client.py  garmin_client.py  google_calendar_client.py  linkedin_client.py  outlook_calendar_client.py  plaid_client.py  schwab_client.py  spotify_client.py  x_client.py
data-api/app/models/: __init__.py  account.py  assignment.py  audit.py  base.py  content_draft.py  credential.py  health_metric.py  listening_history.py  llm_usage.py  social_post.py  transaction.py
data-api/app/security/: __init__.py  audit.py  encryption.py
data-api/tests/: conftest.py  test_api_endpoints.py  test_api_fixes.py  test_audit.py  test_audit_api.py  test_auth.py  test_budget_api.py  test_config.py  test_credentials_api.py  test_encryption.py  test_health_endpoint.py  test_integrations.py  test_models.py  test_spotify.py  test_spotify_api.py  test_spotify_models.py
(+213 files in other folders)
